
//from(d:\svn\common\server\tool\umlpad\baseball\code\pt_usergateserver.xml)

//[[begin of d:\svn\common\server\tool\umlpad\baseball\proto_code_begin.txt

//option optimize_for = LITE_RUNTIME;

import "excel_baseball_table_db.proto";
import "gameLogic.proto";




//]]end of d:\svn\common\server\tool\umlpad\baseball\proto_code_begin.txt




// Packet type specification



//\bb_3.1.6_ug_admin.usd
message s_x2ug_echo {
	optional int32 type = 1;
	optional string msg = 2;
	optional int32 client_time_msec = 3;
}

//\bb_3.1.6_ug_admin.usd
message s_ug2x_echo {
	optional int32 type = 1;
	optional string msg = 2;
	optional int32 client_time_msec = 3;
	optional int64 ug_time_msec = 4;
}

//\bb_3.1.6_ug_admin.usd
message s_ans_ug_error {
	optional int32 sys_error_id = 1;
}

//\bb_3.1.6_ug_admin.usd
message s_x2ug_get_client_version {
	optional string version = 1;
}

//\bb_3.1.6_ug_admin.usd
message s_ug2x_client_version {
	optional string version = 1;
}


message UserGateServer_Client {
	enum Type {
		NONE = 1;

		ug2x_echo = 2;
		ans_ug_error = 3;
		ug2x_client_version = 4;
	}

	required Type type = 1;

	optional s_ug2x_echo m_ug2x_echo = 2;
	optional s_ans_ug_error m_ans_ug_error = 3;
	optional s_ug2x_client_version m_ug2x_client_version = 4;
}
//end of message UserGateServer_Client


message Client_UserGateServer {
	enum Type {
		NONE = 1;

		x2ug_echo = 2;
		x2ug_get_client_version = 3;
	}

	required Type type = 1;

	optional s_x2ug_echo m_x2ug_echo = 2;
	optional s_x2ug_get_client_version m_x2ug_get_client_version = 3;
}
//end of message Client_UserGateServer

